adapter/internal/operator/gateway-api/testdata/gateway-with-listener-with-tcp-with-hostname.out.yaml
gateways:
- apiVersion: gateway.networking.k8s.io/v1
  kind: Gateway
  metadata:
    creationTimestamp: null
    name: gateway-1
    namespace: envoy-gateway
  spec:
    gatewayClassName: envoy-gateway-class
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: foo.com
      name: tcp
      port: 80
      protocol: TCP
  status:
    listeners:
    - attachedRoutes: 0
      conditions:
      - lastTransitionTime: null
        message: Listener must not have hostname set when protocol is TCP.
        reason: Invalid
        status: "False"
        type: Programmed
      - lastTransitionTime: null
        message: Listener references have been resolved
        reason: ResolvedRefs
        status: "True"
        type: ResolvedRefs
      name: tcp
      supportedKinds:
      - group: gateway.networking.k8s.io
        kind: TCPRoute
infraIR:
  envoy-gateway/gateway-1:
    proxy:
      metadata:
        labels:
          apk.wso2.com/owning-gateway-name: gateway-1
          apk.wso2.com/owning-gateway-namespace: envoy-gateway
      name: envoy-gateway/gateway-1
xdsIR:
  envoy-gateway/gateway-1:
    accessLog:
      text:
      - path: /dev/stdout
